[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/Hack-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/slider_theme.tres" type="Theme" id=3]
[ext_resource path="res://sprites/sliders_bg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="Gui" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Wave1" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Wave1Label" type="Label" parent="Wave1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.4, 0.4, 0.6, 1 )
text = "Wave #1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider1f" type="VSlider" parent="Wave1"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 32.0
margin/right = 16.0
margin/bottom = 132.0
range/min = 0.0
range/max = 400.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label1f" type="Label" parent="Wave1/Slider1f"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider1a" type="VSlider" parent="Wave1"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 32.0
margin/top = 32.0
margin/right = 48.0
margin/bottom = 132.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label1a" type="Label" parent="Wave1/Slider1a"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = 112.0
margin/right = 35.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider1p" type="VSlider" parent="Wave1"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 64.0
margin/top = 32.0
margin/right = 80.0
margin/bottom = 132.0
range/min = 0.0
range/max = 6.28319
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label1p" type="Label" parent="Wave1/Slider1p"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "P"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wave2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = 0.0
margin/right = 168.0
margin/bottom = 40.0

[node name="Wave2Label" type="Label" parent="Wave2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.5, 0.5, 0.7, 1 )
text = "Wave #2"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider2f" type="VSlider" parent="Wave2"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 32.0
margin/right = 16.0
margin/bottom = 132.0
range/min = 0.0
range/max = 400.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label2f" type="Label" parent="Wave2/Slider2f"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider2a" type="VSlider" parent="Wave2"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 32.0
margin/top = 32.0
margin/right = 48.0
margin/bottom = 132.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label2a" type="Label" parent="Wave2/Slider2a"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = 112.0
margin/right = 35.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider2p" type="VSlider" parent="Wave2"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 64.0
margin/top = 32.0
margin/right = 80.0
margin/bottom = 132.0
range/min = 0.0
range/max = 6.28319
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label2p" type="Label" parent="Wave2/Slider2p"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "P"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wave3" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 0.0
margin/right = 296.0
margin/bottom = 40.0

[node name="Wave3Label" type="Label" parent="Wave3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.8, 1 )
text = "Wave #3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider3f" type="VSlider" parent="Wave3"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 32.0
margin/right = 16.0
margin/bottom = 132.0
range/min = 0.0
range/max = 400.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label3f" type="Label" parent="Wave3/Slider3f"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider3a" type="VSlider" parent="Wave3"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 32.0
margin/top = 32.0
margin/right = 48.0
margin/bottom = 132.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label3a" type="Label" parent="Wave3/Slider3a"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = 112.0
margin/right = 35.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider3p" type="VSlider" parent="Wave3"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 64.0
margin/top = 32.0
margin/right = 80.0
margin/bottom = 132.0
range/min = 0.0
range/max = 6.283
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label3p" type="Label" parent="Wave3/Slider3p"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "P"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wave4" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 424.0
margin/bottom = 40.0

[node name="Wave4Label" type="Label" parent="Wave4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.9, 0.9, 1, 1 )
text = "Wave #4"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider4f" type="VSlider" parent="Wave4"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 32.0
margin/right = 16.0
margin/bottom = 132.0
range/min = 0.0
range/max = 400.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label4f" type="Label" parent="Wave4/Slider4f"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider4a" type="VSlider" parent="Wave4"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 32.0
margin/top = 32.0
margin/right = 48.0
margin/bottom = 132.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label4a" type="Label" parent="Wave4/Slider4a"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = 112.0
margin/right = 35.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "A"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Slider4p" type="VSlider" parent="Wave4"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 64.0
margin/top = 32.0
margin/right = 80.0
margin/bottom = 132.0
range/min = 0.0
range/max = 6.28319
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label4p" type="Label" parent="Wave4/Slider4p"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 16.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "P"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 237.523, 72.9458 )
transform/scale = Vector2( 0.2, 0.175 )
z/z = -3
texture = ExtResource( 4 )
modulate = Color( 0.835938, 0.835938, 0.835938, 1 )

[connection signal="value_changed" from="Wave1/Slider1f" to="." method="_on_Slider1f_value_changed"]

[connection signal="value_changed" from="Wave1/Slider1a" to="." method="_on_Slider1a_value_changed"]

[connection signal="value_changed" from="Wave1/Slider1p" to="." method="_on_Slider1p_value_changed"]

[connection signal="value_changed" from="Wave2/Slider2f" to="." method="_on_Slider2f_value_changed"]

[connection signal="value_changed" from="Wave2/Slider2a" to="." method="_on_Slider2a_value_changed"]

[connection signal="value_changed" from="Wave2/Slider2p" to="." method="_on_Slider2p_value_changed"]

[connection signal="value_changed" from="Wave3/Slider3f" to="." method="_on_Slider3f_value_changed"]

[connection signal="value_changed" from="Wave3/Slider3a" to="." method="_on_Slider3a_value_changed"]

[connection signal="value_changed" from="Wave3/Slider3p" to="." method="_on_Slider3p_value_changed"]

[connection signal="value_changed" from="Wave4/Slider4f" to="." method="_on_Slider4f_value_changed"]

[connection signal="value_changed" from="Wave4/Slider4a" to="." method="_on_Slider4a_value_changed"]

[connection signal="value_changed" from="Wave4/Slider4p" to="." method="_on_Slider4p_value_changed"]


